Final Documentation files

--- a/AI Training/Binary_Classification.ipynb
+++ b/AI Training/Binary_Classification.ipynb
@@ -25,14 +25,24 @@
     "\n",
     "# File paths for the Gradient Boosting training datasets\n",
     "gradient_boosting_train_files = [\n",
-    "    'Dataset/Friday-WorkingHours-Afternoon-DDos.pcap_ISCX.csv',\n",
-    "    'Dataset/Friday-WorkingHours-Afternoon-PortScan.pcap_ISCX.csv',\n",
-    "    'Dataset/Friday-WorkingHours-Morning.pcap_ISCX.csv',\n",
-    "    'Dataset/Monday-WorkingHours.pcap_ISCX.csv',\n",
-    "    'Dataset/Thursday-WorkingHours-Afternoon-Infilteration.pcap_ISCX.csv',\n",
-    "    'Dataset/Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv',\n",
-    "    'Dataset/Tuesday-WorkingHours.pcap_ISCX.csv',\n",
-    "    'Dataset/Wednesday-workingHours.pcap_ISCX.csv'\n",
+    "    'Friday-WorkingHours-Afternoon-DDos.pcap_ISCX.csv',\n",
+    "    'Friday-WorkingHours-Afternoon-PortScan.pcap_ISCX.csv',\n",
+    "    'Friday-WorkingHours-Morning.pcap_ISCX.csv',\n",
+    "    'Monday-WorkingHours.pcap_ISCX.csv',\n",
+    "    'Thursday-WorkingHours-Afternoon-Infilteration.pcap_ISCX.csv',\n",
+    "    'Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv',\n",
+    "    'Tuesday-WorkingHours.pcap_ISCX.csv',\n",
+    "    'Wednesday-workingHours.pcap_ISCX.csv',\n",
+    "    'Friday-02-03-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Friday-16-02-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Friday-23-02-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Thuesday-20-02-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Thursday-01-03-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Thursday-15-02-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Thursday-22-02-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Wednesday-14-02-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Wednesday-21-02-2018_TrafficForML_CICFlowMeter.csv',\n",
+    "    'Wednesday-28-02-2018_TrafficForML_CICFlowMeter.csv'\n",
     "]\n",
     "\n",
     "# -----------------------------\n",
